--- a/index.html
+++ b/index.html
@@ -3,50 +3,131 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Portfolio | Your Name</title>
-<style>
-    body { margin:0; font-family: Arial, sans-serif; background:#0e0f12; color:#fff; }
-    nav { display:flex; justify-content:flex-end; gap:25px; padding:20px 50px; background:#131418; position:fixed; width:100%; top:0; }
-    nav a { color:#bbb; text-decoration:none; font-weight:bold; }
-    nav a:hover { color:#ff5733; }
+<title>Portfolio | Aniket Chougule</title>
 
-    header { padding-top:120px; text-align:left; display:flex; justify-content:space-between; align-items:center; padding:120px 10%; }
+<style>
+    body {
+        margin:0;
+        font-family: Arial, sans-serif;
+        background: linear-gradient(135deg, #0a0a0f, #1a1a1f);
+        color:#fff;
+        scroll-behavior: smooth;
+    }
+
+    /* Navbar */
+    nav {
+        display:flex;
+        justify-content:flex-end;
+        gap:25px;
+        padding:20px 50px;
+        background:rgba(0,0,0,0.4);
+        position:fixed;
+        width:100%;
+        top:0;
+        backdrop-filter: blur(10px);
+        z-index:999;
+    }
+    nav a { color:#bbb; text-decoration:none; font-weight:bold; transition:0.3s; }
+    nav a:hover { color:#ff5733; text-shadow:0 0 10px #ff5733; }
+
+    /* Hero Section */
+    header {
+        padding-top:120px;
+        display:flex;
+        justify-content:space-between;
+        align-items:center;
+        padding:120px 10%;
+    }
     .title { max-width:50%; }
     .title h1 { font-size:3rem; }
     .title span { color:#ff5733; }
+    
     .btn-group a {
-        display:inline-block; margin:12px 12px 0 0; padding:10px 20px;
-        text-decoration:none; border:2px solid #ff5733; border-radius:5px; color:#ff5733;
+        display:inline-block;
+        margin:12px 12px 0 0;
+        padding:10px 20px;
+        text-decoration:none;
+        border:2px solid #ff5733;
+        border-radius:5px;
+        color:#ff5733;
+        font-weight:600;
+        transition:0.3s;
     }
-    .btn-group a:hover { background:#ff5733; color:#fff; }
+    .btn-group a:hover {
+        background:#ff5733;
+        color:#fff;
+        box-shadow:0 0 20px #ff5733;
+    }
 
-    .hero-img img { width:330px; border-radius:12px; border:3px solid #ff5733; }
+    .hero-img img {
+        width:330px;
+        border-radius:12px;
+        border:3px solid #ff5733;
+        transition:0.4s;
+    }
+    .hero-img img:hover {
+        transform: scale(1.05);
+        box-shadow:0 0 30px #ff5733;
+    }
 
     section { padding:80px 10%; }
     h2 { color:#ff5733; margin-bottom:25px; }
 
-    .skills { display:flex; gap:15px; justify-content:center; flex-wrap:wrap; }
-    .skill { padding:8px 20px; background:#1b1c20; border-radius:20px; font-size:14px; }
+    /* Skills */
+    .skills {
+        display:flex; gap:15px; justify-content:center; flex-wrap:wrap;
+    }
+    .skill {
+        padding:8px 20px; background:#1f1f25;
+        border-radius:20px; font-size:14px;
+        transition:0.3s;
+    }
+    .skill:hover {
+        background:#ff5733; color:#fff;
+        transform:scale(1.1);
+    }
 
+    /* About Section */
     .about-box {
-        background:#1b1c20; padding:30px; border-radius:10px; text-align:center;
+        background:#1b1c20; padding:30px;
+        border-radius:10px; text-align:center;
+        box-shadow:0 0 20px rgba(255,87,51,0.1);
+    }
+    .stats {
+        display:flex; justify-content:space-around;
+        margin-top:30px;
+    }
+    .stat h3 {
+        color:#ff5733; font-size:2rem; margin-bottom:4px;
+        text-shadow:0 0 8px #ff5733;
     }
 
-    .stats { display:flex; justify-content:space-around; margin-top:30px; }
-    .stat { text-align:center; }
-    .stat h3 { color:#ff5733; font-size:2rem; margin-bottom:4px; }
-
+    /* Projects */
     .project-card {
-        background:#1b1c20; padding:25px; border-radius:10px; margin-bottom:20px;
+        background:#1b1c20; padding:25px;
+        border-radius:10px; margin-bottom:20px;
+        transition:0.3s;
+        border-left:4px solid #ff5733;
+    }
+    .project-card:hover {
+        transform:translateY(-5px);
+        box-shadow:0 0 20px rgba(255,87,51,0.2);
     }
 
-    footer { text-align:center; padding:20px; background:#131418; margin-top:60px; }
-    
+    footer {
+        text-align:center;
+        padding:20px;
+        background:#131418;
+        margin-top:60px;
+        border-top:2px solid #ff5733;
+    }
+
     @media(max-width:900px) {
         header { flex-direction:column; text-align:center; }
         .title { max-width:100%; padding-bottom:25px; }
     }
 </style>
+
 </head>
 <body>
 
@@ -63,12 +144,12 @@
         <h1>I'm <span>Aniket Chougule</span></h1>
         <h2>DevOps Engineer</h2>
         <div class="btn-group">
-            <a href="#">Hire Me</a>
-            <a href="#">My Resume</a>
+            <a href="https://github.com/aniketchougule108" target="_blank">GitHub</a>
+            <a href="resume.pdf" target="_blank">My Resume</a>
         </div>
     </div>
     <div class="hero-img">
-        <img src="aniket.jpeg" alt="Profile">
+        <img src="img/aniket.jpeg" alt="Profile">
     </div>
 </header>
 
@@ -87,13 +168,18 @@
 <section id="about">
     <h2>About Me</h2>
     <div class="about-box">
-        <p>I am a motivated DevOps and with practical experience in automating deployments, configuring CI/CD pipelines, and hosting web applications on cloud environments. I have worked with tools like Jenkins, GitHub, AWS, PM2, and Nginx to streamline development workflows and ensure reliable software delivery. I also build backend services using Node.js and Express with database support from MongoDB and MySQL. I believe in continuous learning, strong teamwork, and delivering high-quality results that help organizations grow and scale efficiently.</p>
+        <p>
+            I am a motivated DevOps and Full-Stack Developer with hands-on experience in automating deployments,
+            configuring CI/CD pipelines, and hosting applications on cloud environments.
+            I focus on efficient workflows, server management, and secure deployments. I believe in continuous learning,
+            strong teamwork, and delivering high-quality results that help organizations grow.
+        </p>
         <div class="stats">
             <div class="stat">
                 <h3>05+</h3><p>Projects</p>
             </div>
             <div class="stat">
-                <h3>Freshers </h3><p>Years Exp.</p>
+                <h3>Fresher</h3><p>Experience</p>
             </div>
             <div class="stat">
                 <h3>100%</h3><p>Learning</p>
@@ -120,8 +206,8 @@
 
 <section id="contact">
     <h2>Contact</h2>
-    <p>Email: aniketchougule678@gmail.com</p>
-    <p>Mobile: +91 7741029513</p>
+    <p>Email: <a href="mailto:aniketchougule678@gmail.com" style="color:#ff5733;">aniketchougule678@gmail.com</a></p>
+    <p>Mobile: <a href="tel:+917741029513" style="color:#ff5733;">+91 7741029513</a></p>
 </section>
 
 <footer>
