--- a/index.html
+++ b/index.html
@@ -138,73 +138,20 @@
     <a href="#contact">Contact</a>
 </nav>
 
-<header id="home" style="padding-top:100px;">
-    <div style="
-        display:flex; 
-        align-items:center;
-        justify-content:space-between;
-        background:linear-gradient(90deg, #ff2e43 50%, #f4f4f4 50%);
-        padding:80px 10%;
-        border-bottom-left-radius:30px;
-        border-bottom-right-radius:30px;
-        box-shadow:0 4px 25px rgba(0,0,0,0.3);
-    ">
-        
-        <!-- Left Content -->
-        <div style="max-width:45%; color:#fff;">
-            <h1 style="font-size:3rem; font-weight:800; margin:0;">Aniket<br>Chougule</h1>
-            <p style="margin-top:12px; line-height:1.5; font-size:1rem; opacity:0.9;">
-                DevOps Engineer • Cloud Enthusiast<br>
-                CI/CD | AWS | Docker | Linux | Automation
-            </p>
-
-            <div style="margin-top:25px;">
-                <a href="#contact" style="
-                    margin-right:10px;
-                    display:inline-block;
-                    padding:12px 30px;
-                    background:#fff;
-                    color:#ff2e43;
-                    border-radius:50px;
-                    font-weight:bold;
-                    text-decoration:none;
-                    transition:0.3s;
-                ">Hire Me</a>
-
-                <a href="resume.pdf" target="_blank" style="
-                    display:inline-block;
-                    padding:12px 30px;
-                    border:2px solid #fff;
-                    color:#fff;
-                    border-radius:50px;
-                    font-weight:bold;
-                    text-decoration:none;
-                    transition:0.3s;
-                ">Download CV</a>
-            </div>
-        </div>
-
-        <!-- Right Profile Image -->
-        <div style="max-width:45%; text-align:center;">
-            <img src="aniket.jpeg" alt="Aniket" style="
-                width:300px;
-                border-radius:20px;
-                box-shadow:0 10px 40px rgba(0,0,0,0.4);
-            ">
+<header id="home">
+    <div class="title">
+        <p>Hello<span>.</span></p>
+        <h1>I'm <span>Aniket Chougule</span></h1>
+        <h2>DevOps Engineer</h2>
+        <div class="btn-group">
+            <a href="https://github.com/aniketchougule108" target="_blank">GitHub</a>
+            <a href="resume.pdf" target="_blank">My Resume</a>
         </div>
     </div>
-
-    <div style="background:#1a1e25; padding:20px 10%; display:flex; justify-content:center; gap:40px;">
-        <img src="https://img.icons8.com/fluency/48/github.png" style="height:30px;">
-        <img src="https://img.icons8.com/color/48/amazon-web-services.png" style="height:30px;">
-        <img src="https://img.icons8.com/color/48/docker.png" style="height:30px;">
-        <img src="https://img.icons8.com/color/48/jenkins.png" style="height:30px;">
-        <img src="https://img.icons8.com/color/48/linux.png" style="height:30px;">
+    <div class="hero-img">
+        <img src="img/aniket.jpeg" alt="Profile">
     </div>
 </header>
-
-
-
 
 <section id="skills">
     <h2>Skills</h2>
