--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <style>
     body {
         margin:0;
-        font-family: Arial, sans-serif;
-        background: linear-gradient(135deg, #0a0a0f, #1a1a1f);
-        color:#fff;
+        font-family: 'Segoe UI', sans-serif;
+        background:#ffffff;
+        color:#333;
         scroll-behavior: smooth;
     }
 
@@ -20,17 +20,17 @@
         justify-content:flex-end;
         gap:25px;
         padding:20px 50px;
-        background:rgba(0,0,0,0.4);
+        background:#fff;
         position:fixed;
         width:100%;
         top:0;
-        backdrop-filter: blur(10px);
+        box-shadow:0 2px 8px rgba(0,0,0,0.1);
         z-index:999;
     }
-    nav a { color:#bbb; text-decoration:none; font-weight:bold; transition:0.3s; }
-    nav a:hover { color:#ff5733; text-shadow:0 0 10px #ff5733; }
+    nav a { color:#444; font-weight:bold; text-decoration:none; transition:0.3s; }
+    nav a:hover { color:#ff5733; }
 
-    /* Hero Section */
+    /* Hero */
     header {
         padding-top:120px;
         display:flex;
@@ -38,36 +38,36 @@
         align-items:center;
         padding:120px 10%;
     }
-    .title { max-width:50%; }
-    .title h1 { font-size:3rem; }
+    .title h1 { font-size:3rem; font-weight:700; }
     .title span { color:#ff5733; }
-    
+    .title h2 { color:#555; font-size:1.6rem; }
+
     .btn-group a {
         display:inline-block;
         margin:12px 12px 0 0;
-        padding:10px 20px;
-        text-decoration:none;
+        padding:10px 24px;
         border:2px solid #ff5733;
-        border-radius:5px;
+        border-radius:32px;
         color:#ff5733;
         font-weight:600;
         transition:0.3s;
+        text-decoration:none;
     }
     .btn-group a:hover {
         background:#ff5733;
         color:#fff;
-        box-shadow:0 0 20px #ff5733;
+        box-shadow:0 4px 16px rgba(255,87,51,0.3);
     }
 
     .hero-img img {
         width:330px;
         border-radius:12px;
         border:3px solid #ff5733;
-        transition:0.4s;
+        box-shadow:0 5px 22px rgba(0,0,0,0.15);
+        transition:0.3s;
     }
     .hero-img img:hover {
-        transform: scale(1.05);
-        box-shadow:0 0 30px #ff5733;
+        transform:scale(1.03);
     }
 
     section { padding:80px 10%; }
@@ -78,56 +78,64 @@
         display:flex; gap:15px; justify-content:center; flex-wrap:wrap;
     }
     .skill {
-        padding:8px 20px; background:#1f1f25;
-        border-radius:20px; font-size:14px;
+        padding:10px 25px;
+        background:#ffebe5;
+        border-radius:30px;
+        font-size:14px;
+        border:1px solid #ffbdad;
         transition:0.3s;
+        font-weight:600;
     }
     .skill:hover {
         background:#ff5733; color:#fff;
-        transform:scale(1.1);
+        transform:translateY(-3px);
     }
 
-    /* About Section */
+    /* About */
     .about-box {
-        background:#1b1c20; padding:30px;
-        border-radius:10px; text-align:center;
-        box-shadow:0 0 20px rgba(255,87,51,0.1);
+        background:#f5f5f5;
+        padding:35px;
+        border-radius:12px;
+        text-align:center;
+        border:1px solid #eee;
     }
     .stats {
         display:flex; justify-content:space-around;
         margin-top:30px;
     }
     .stat h3 {
-        color:#ff5733; font-size:2rem; margin-bottom:4px;
-        text-shadow:0 0 8px #ff5733;
+        color:#ff5733;
+        font-size:2rem;
+        margin-bottom:4px;
     }
 
     /* Projects */
     .project-card {
-        background:#1b1c20; padding:25px;
-        border-radius:10px; margin-bottom:20px;
+        background:#fff;
+        padding:25px;
+        border-radius:12px;
+        margin-bottom:20px;
+        border:1px solid #eee;
         transition:0.3s;
-        border-left:4px solid #ff5733;
     }
     .project-card:hover {
         transform:translateY(-5px);
-        box-shadow:0 0 20px rgba(255,87,51,0.2);
+        box-shadow:0 4px 20px rgba(0,0,0,0.08);
     }
 
     footer {
         text-align:center;
         padding:20px;
-        background:#131418;
-        margin-top:60px;
+        background:#fff;
         border-top:2px solid #ff5733;
+        margin-top:60px;
     }
 
     @media(max-width:900px) {
         header { flex-direction:column; text-align:center; }
-        .title { max-width:100%; padding-bottom:25px; }
+        .title { padding-bottom:30px; }
     }
 </style>
-
 </head>
 <body>
 
@@ -171,8 +179,7 @@
         <p>
             I am a motivated DevOps and Full-Stack Developer with hands-on experience in automating deployments,
             configuring CI/CD pipelines, and hosting applications on cloud environments.
-            I focus on efficient workflows, server management, and secure deployments. I believe in continuous learning,
-            strong teamwork, and delivering high-quality results that help organizations grow.
+            I focus on efficient workflows, server management, and secure deployments.
         </p>
         <div class="stats">
             <div class="stat">
