--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 <header id="home">
     <div class="title">
         <p>Hello<span>.</span></p>
-        <h1>I'm <span>Aniket Chougule</span></h1>
-        <h2>Cloud & DevOps Specialist</h2>
+        <h1>I'm <span>Aniket Chougule</span></h1> 
+        <h2> Cloud & DevOps Enthusiast</h2>
         <div class="btn-group">
             <a href="https://github.com/aniketchougule108" target="_blank">GitHub</a>
             <a href="resume.pdf" target="_blank">My Resume</a>
@@ -175,7 +175,7 @@
         <div class="skill">AWS</div>
         <div class="skill">Jenkins</div>
         <div class="skill">GitHub</div>
-        <div class="skill">Docker</div>
+        <div class="skill">Devops</div>
         <div class="skill">Node.js</div>
         <div class="skill">Linux</div>
     </div>
