--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <div class="title">
         <p style="font-size:20px;">Hello<span>!</span></p>
         <h1>I'm <span>Aniket Chougule</span></h1> 
-        <h2>Cloud & DevOps Engineer (Fresher)</h2>
+        <h2>Cloud & DevOps Enthusiast</h2>
 
         <div class="btn-group">
             <a href="https://github.com/aniketchougule108" target="_blank">GitHub</a>
